fpp_analysis/src/test/array/format_too_many_repls.ref.txt
error: too many format specifiers
 --> [ local path prefix ]/array/format_too_many_repls.fpp:1:30
  |
1 | array A = [3] U32 format "{} {} {}"
  |                              ^^ no field to format
  |
 ::: [ local path prefix ]/array/format_too_many_repls.fpp:1:33
  |
1 | array A = [3] U32 format "{} {} {}"
  |                                 ^^ no field to format

